--- a/notebooks/01_eda_preprocessing.ipynb
+++ b/notebooks/01_eda_preprocessing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "28f2aee5",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.11.9)",
+   "display_name": "hr-pulse-azure-mlops (3.11.9)",
    "language": "python",
    "name": "python3"
   },
